# Project-Manager-CLI

./: .gitignore  LICENSE  README.md  crud.py  db.sqlite3  enums.py  main.py  projects.py  pyproject.toml  setup.cfg  tasks.py
protracker/: crud.py  database.py  main.py  projects.py  tasks.py
src/: crud.py  main.py  tasks.py
