[metadata]

name =
version = 0.0.1
author = Faiz Saiyad
author_email = fsaiyad990@gmail.com
description = A CLI for keeping track of projects and their tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Enhancifire/Project-Manager-CLI

classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]

python_requires = >= 3.7
packages = find:
install_requires =
  sqlalchemy
  typer
  rich
  inquirer
