[metadata]

name = protrack
version = 0.0.1
author = Faiz Saiyad
author_email = fsaiyad990@gmail.com
description = A CLI for keeping track of projects and their tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Enhancifire/Project-Manager-CLI
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7

install_requires =
  sqlalchemy
  typer
  rich
  inquirer

include_package_data = True

[options.entry_points]
console_scripts =
  protrack = protracker.main:run_app
